--- a/src/app/modules/admin/apps/users/details/details.component.html
+++ b/src/app/modules/admin/apps/users/details/details.component.html
@@ -156,6 +156,14 @@
                                 [placeholder]="'First Name'"
                                 [spellcheck]="false">
                         </mat-form-field>
+                        <div *ngIf="userForm.get('firstName').invalid &&
+                                userForm.get('firstName').errors &&
+                                (userForm.get('firstName').dirty || userForm.get('firstName').touched)">
+                            <medium class="text-danger"
+                                   *ngIf="userForm.get('firstName').hasError('required')">
+                                This field is required.
+                            </medium>
+                        </div>
                     </div>
 
                     <!-- Last Name -->
@@ -172,6 +180,14 @@
                                 [placeholder]="'Last Name'"
                                 [spellcheck]="false">
                         </mat-form-field>
+                        <div *ngIf="userForm.get('lastName').invalid &&
+                                userForm.get('lastName').errors &&
+                                (userForm.get('lastName').dirty || userForm.get('lastName').touched)">
+                            <medium class="text-danger"
+                                    *ngIf="userForm.get('lastName').hasError('required')">
+                                This field is required.
+                            </medium>
+                        </div>
                     </div>
 
                     <!-- Email -->
@@ -187,6 +203,18 @@
                                 [formControlName]="'email'"
                                 [placeholder]="'Email'">
                         </mat-form-field>
+                        <div *ngIf="userForm.get('email').invalid &&
+                                userForm.get('email').errors &&
+                                (userForm.get('email').dirty || userForm.get('email').touched)">
+                            <medium class="text-danger"
+                                    *ngIf="userForm.get('email').hasError('required')">
+                                This field is required.
+                            </medium>
+                            <medium class="text-danger"
+                                    *ngIf="userForm.get('email').hasError('email')">
+                                This field must be a valid email.
+                            </medium>
+                        </div>
                     </div>
 
                     <!-- Active -->
@@ -229,27 +257,9 @@
                                     </mat-option>
                                 </ng-container>
                             </mat-select>
-
-<!--                            <mat-select-trigger class="text-md">-->
-<!--                                <span>Role:</span>-->
-<!--                                <span class="ml-1 font-medium">{{roleSelect.value | titlecase}}</span>-->
-<!--                            </mat-select-trigger>-->
-<!--                            <ng-container *ngFor="let profileType of profileTypes">-->
-<!--                                <mat-option-->
-<!--                                    class="h-auto py-4 leading-none"-->
-<!--                                    [value]="profileType.value">-->
-<!--                                    <div class="font-medium">{{profileType.label}}</div>-->
-<!--                                    <div class="mt-1.5 text-sm whitespace-normal leading-normal text-secondary">{{profileType.description}}</div>-->
-<!--                                </mat-option>-->
-<!--                            </ng-container>-->
-<!--                            <mat-select [formControlName]="'profile'">-->
-<!--                                <mat-option *ngFor="let profileType of profileTypes" [value]="profileType.value">-->
-<!--                                    <div class="font-medium">{{profileType.label}}</div>-->
-<!--                                    <div class="mt-1.5 text-sm whitespace-normal leading-normal text-secondary">{{profileType.description}}</div>-->
-<!--                                </mat-option>-->
-<!--                            </mat-select>-->
                         </mat-form-field>
                     </div>
+                </form>
 
                     <ng-container *ngIf="isAdminUser && !createMode">
                         <div class="mt-8 space-x-3">
@@ -297,7 +307,7 @@
                         </button>
                     </div>
 
-                </form>
+
             </div>
         </div>
     </ng-container>
